@@ -8,17 +8,19 @@ import javafx.scene.control.Label;
 import javafx.scene.control.ScrollPane;
 import javafx.scene.input.KeyCode;
 import javafx.scene.layout.*;
+import javafx.scene.shape.Rectangle;
 import javafx.stage.Popup;
 import javafx.stage.Window;
 import org.flimwip.design.Controller.CheckoutSelectionController;
 import org.flimwip.design.Controller.FileController;
 import org.flimwip.design.Controller.UserController;
+import org.flimwip.design.Documentationhandler.*;
 import org.flimwip.design.Models.CheckoutModel;
+import org.flimwip.design.NetCon;
 import org.flimwip.design.Views.MainViews.Analyse2;
 import org.flimwip.design.Views.helpers.LogFile;
 import org.flimwip.design.utility.LoggingLevels;
 import org.flimwip.design.utility.PKLogger;
-import org.flimwip.design.Documentationhandler.*;
 
 import java.io.File;
 import java.io.IOException;
@@ -90,7 +92,7 @@ public class BranchView extends BorderPane {
     private VBox top = new VBox();
     /**
      * VBox variable representing the kassen_info.
-     *
+     * <p>
      * Kassen_info is used in the BranchView class to display information about a selected checkout.
      * It is a VBox container that holds various labels and buttons related to the selected checkout.
      * It is primarily used to provide information such as the checkout's version number and location.
@@ -127,7 +129,7 @@ public class BranchView extends BorderPane {
     private ArrayList<CheckoutModel> checkoutModels;
     /**
      * Private variable representing an array of Checkout objects.
-     *
+     * <p>
      * The 'kassen' array stores all the Checkout objects related to the branch.
      *
      * @see Checkout
@@ -150,7 +152,7 @@ public class BranchView extends BorderPane {
     private String nl_id;
     /**
      * Private variable representing an instance of the `Analyse2` class.
-     *
+     * <p>
      * This variable is used within the `BranchView` class to handle analysis functionality.
      */
     @ServiceATT(desc="Private variable representing an instance of the Analyse2 class.",
@@ -183,7 +185,7 @@ public class BranchView extends BorderPane {
                 related={"None"})
     private Semaphore semaphore;
 
-    private UserController user_controller;
+    private final UserController user_controller;
     
     /**
      * Represents a branch view.
@@ -220,7 +222,7 @@ public class BranchView extends BorderPane {
         this.version = new Label("Version: ");
         this.version.setStyle("-fx-text-fill: black");
         this.city = new Label("Standort: ");
-        this.heading = new Label("NL " + this.checkoutModels.get(0).branch_name() + " (" + this.nl_id + ")");
+        this.heading = new Label(STR."NL \{this.checkoutModels.getFirst().branch_name()} (\{this.nl_id})");
         this.heading.setStyle("-fx-font-family: 'Fira Mono'; -fx-font-weight: bold; -fx-font-size: 25; -fx-text-fill: #444444");
         this.heading.setPadding(new Insets(0, 0, 0, 10));
         set_side();
@@ -228,8 +230,6 @@ public class BranchView extends BorderPane {
         seting_kassen_info();
         this.top_wrapper.getChildren().addAll(side, top, kassen_info);
         this.setTop(top_wrapper);
-
-
     }
     /**
      * Sets the necessary components and properties of the "side" section in the BranchView.
@@ -302,7 +302,7 @@ public class BranchView extends BorderPane {
         this.kassen = new Checkout[checkoutModels.size()];
         int i = 0;
         for(CheckoutModel km : checkoutModels){
-            Checkout k = new Checkout(km.branch(), km.checkout_id(), km.version(), this.controller , this.semaphore, this.user_controller);
+            Checkout k = new Checkout(km, this.controller , this.semaphore, this.user_controller);
             kassen[i] = k;
             i++;
         }
@@ -399,9 +399,7 @@ public class BranchView extends BorderPane {
             for(File f: k.getFiles()){
                 flow.getChildren().add(build_file(f));
             }
-            /*for(int i = 0; i < 100; i++){
-                flow.getChildren().add(build_file(i));
-            }*/
+
             ScrollPane scroller = new ScrollPane(flow);
             scroller.setPadding(new Insets(10));
             scroller.setFitToWidth(true);
@@ -431,6 +429,7 @@ public class BranchView extends BorderPane {
               related={"LogFile"})
     public LogFile build_file(File f){
         String name = f.getName();
+        String id = f.getAbsolutePath();
         String date = null;
         try {
             date = String.valueOf(Files.getLastModifiedTime(Path.of(f.getAbsolutePath()))).split("T")[0];
@@ -444,7 +443,7 @@ public class BranchView extends BorderPane {
             throw new RuntimeException(e);
         }
 
-        LogFile file = new LogFile(name, size, date, this.fc);
+        LogFile file = new LogFile(name, id,size, date, this.fc);
         this.fc.add_file(file);
         return file;
     }
@@ -453,7 +452,7 @@ public class BranchView extends BorderPane {
      * This method creates a Popup object and adds buttons and their actions to it.
      * The menu is displayed near the clicked position.
      */
-    @ServiceM(desc="<##>Shows a menu with different options when a right-click occurs. This method creates a Popup object and adds buttons and their actions to it. The menu is displayed near the clicked position.",
+    @ServiceM(desc="Shows a menu with different options when a right-click occurs. This method creates a Popup object and adds buttons and their actions to it. The menu is displayed near the clicked position.",
               category="Method",
               params={"None"},
               returns="void",
@@ -469,13 +468,38 @@ public class BranchView extends BorderPane {
         box.setPadding(new Insets(10));
 
         Button im = new Button("Import");
-        im.setOnAction(actionEvent -> {
-            Thread t = new Thread(() -> {
-                for(int i = 0; i < 10000000; i++){
+        im.setOnAction(_ -> {
+            this.fc.get_selected_size();
+            System.out.println(this.getWidth());
+            Pane p = new Pane();
+            Rectangle r = new Rectangle();
+            r.setWidth(this.getWidth());
+            r.setHeight(10);
+            p.getChildren().add(r);
+            this.setBottom(p);
 
+            Runnable runnable = new Runnable() {
+                @Override
+                public void run() {
+                    ArrayList<LogFile> files = fc.get_selected_files();
+
+                    for(int i = 0; i < files.size(); i++){
+                        NetCon connection = new NetCon(controller.getSelected().get_ip(), user_controller.get_selected_user().getUsername(), user_controller.get_selected_user().getPassword());
+                        try {
+                            connection.get_connection();
+                            System.out.println("Connection could be established for download");
+                            connection.close_connection();
+                            System.out.println("Connection closed");
+                        } catch (IOException e) {
+                            throw new RuntimeException(e);
+                        }
+                    }
+                    fc.deselect_all();
                 }
-                this.fc.deselect_all();
-            });
+            };
+
+
+            Thread t = new Thread(runnable);
             t.setDaemon(true);
             t.start();
             popup.hide();
@@ -484,10 +508,10 @@ public class BranchView extends BorderPane {
         box.getChildren().add(im);
 
         Button im2 = new Button("Import (Analyse)");
-        im2.setOnAction(actionEvent -> {
+        im2.setOnAction(_ -> {
             Thread t = new Thread(() -> {
                 for(int i = 0; i < 10000000; i++){
-
+                    logger.log(LoggingLevels.DEBUG, "Running for all files");
                 }
                 this.fc.deselect_all();
             });
@@ -500,6 +524,6 @@ public class BranchView extends BorderPane {
 
         popup.getContent().add(box);
         popup.setAutoHide(true);
-        popup.show(Window.getWindows().get(0));
+        popup.show(Window.getWindows().getFirst());
     }
 }
